--- a/Lab/Assignment1/Makefile
+++ b/Lab/Assignment1/Makefile
@@ -5,6 +5,15 @@
 test: multiopt.bc
 	opt -passes="localopts" multiopt.bc -S -o multiopt.optimized.bc
 
+test-anto: anto.bc
+	opt -passes="localopts" anto.bc -S -o anto.optimized.bc
+
+test-algebraic: algebraic.bc
+	opt -passes="localopts" algebraic.bc -S -o algebraic.optimized.bc
+
+test-manu: manu.bc
+	opt -passes="localopts" manu.bc -S -o manu.optimized.bc
+
 .PHONY: clean
 
 clean:
