[AS-1] Added Makefile and tests

--- a/Lab/Assignment1/Makefile
+++ b/Lab/Assignment1/Makefile
@@ -1,20 +1,17 @@
+.PRECIOUS: %.bc
 
 %.bc: %.c
 	clang -O0 -emit-llvm -c $^ -S -o $@
 
-test: multiopt.bc
-	opt -passes="localopts" multiopt.bc -S -o multiopt.optimized.bc
+test-%: %.bc
+	opt -passes="localopts" $*.bc -S -o $*.optimized.bc
 
-test-anto: anto.bc
-	opt -passes="localopts" anto.bc -S -o anto.optimized.bc
 
-test-algebraic: algebraic.bc
-	opt -passes="localopts" algebraic.bc -S -o algebraic.optimized.bc
+.PHONY: clean compare
 
-test-manu: manu.bc
-	opt -passes="localopts" manu.bc -S -o manu.optimized.bc
-
-.PHONY: clean
+# Compare optimized and unoptimized bitcode
+compare-%:
+	diff --side-by-side $*.bc $*.optimized.bc
 
 clean:
 	rm *.bc
